--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8080
+server.servlet.context-path=/
 
+
+spring.datasource.url=jdbc:mysql://localhost:3306/imusic_studio
+spring.datasource.username=root
+spring.datasource.password=sapassword
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
