--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,16 @@ spring.datasource.url=jdbc:mysql://localhost:3306/imusic_studio
 spring.datasource.username=root
 spring.datasource.password=huynhnhatquang292001
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+server.error.whitelabel.enabled=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.ErrorMvcAutoConfiguration
+#spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.enabled=false
+spring.thymeleaf.cache=false
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:sqlserver://sqlsv\\sqlexpress;databaseName=imusic_studio
-#spring.datasource.username=sa
-#spring.datasource.password=sapassword
