--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ server.servlet.context-path=/
 #DATASOURCE
 spring.datasource.url=jdbc:mysql://localhost:3306/imusic_studio
 spring.datasource.username=root
-spring.datasource.password=sapassword
+spring.datasource.password=26042001
 
 #JPA
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
