--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.context-path=/
 #DATASOURCE
 spring.datasource.url=jdbc:mysql://localhost:3306/imusic_studio
 spring.datasource.username=root
-spring.datasource.password=26042001
+spring.datasource.password=sapassword
 
 #JPA
 spring.jpa.hibernate.ddl-auto=validate
