--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,12 @@ spring.datasource.username=root
 spring.datasource.password=huynhnhatquang292001
 
 #JPA
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+logging.level.org.hibernate.SQL=DEBUG
 
 server.error.whitelabel.enabled=false
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.ErrorMvcAutoConfiguration
